[tool.poetry]
name = "guarddog"
description = "GuardDog is a CLI tool to Identify malicious PyPI packages"
authors = ["Ellen Wang", "Christophe Tafani-Dereeper"]
license = "Apache-2.0"
readme = "pypi.rst"
repository = "https://github.com/DataDog/guarddog"
version = "0.0.0"

[tool.poetry.scripts]
guarddog = "guarddog.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4"
semgrep = "1.67.0"
requests = "^2.29.0"
python-dateutil = "^2.8.2"
click = "^8.1.3"
click-option-group = "^0.5.5"
colorama = "^0.4.6"  # used by click
urllib3 = "2.2.1"
python-whois = ">=0.8,<0.10"
termcolor = "^2.1.0"
tarsafe = "^0.0.5"
semantic-version = "^2.10.0"
pyyaml = "^6.0"
# 1.12+ requires new version of libgit2 which is not avaiable in Alpine
pygit2 = ">=1.11,<1.15"
configparser = ">=5.3,<7.0"
prettytable="^3.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
coverage = "^7.2.7"
flake8 = ">=5.0.4,<8.0.0"
pytest = "^7.4.0"
setuptools = ">=65.6.3,<69.0.0"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests/analyzer/metadata",
    "tests/core"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


