[tool.poetry]
name = "guarddog"
description = "GuardDog is a CLI tool for identifying malicious open source packages"
authors = ["Ellen Wang", "Christophe Tafani-Dereeper"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/DataDog/guarddog"
version = "2.9.0"

[tool.poetry.scripts]
guarddog = "guarddog.cli:cli"

[tool.poetry.dependencies]
click = "^8.1.3"
configparser = ">=5.3,<8.0"
disposable-email-domains = ">=0.0.103,<0.0.160"
prettytable="^3.6.0"
python = ">=3.10,<4"
python-dateutil = "^2.8.2"
python-whois = ">=0.8,<0.10"
# 1.12+ requires new version of libgit2 which is not avaiable in Alpine
pygit2 = ">=1.11,<1.19"
pyyaml = "^6.0"
requests = "^2.29.0"
semantic-version = "^2.10.0"
semgrep = "^1.147.0"
tarsafe = "^0.0.5"
termcolor = "^3.3.0"
urllib3 = "^2.5.0"
yara-python = "^4.5.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.3"
flake8 = ">=5.0.4,<8.0.0"
mypy = "^1.4.1"
pytest = ">=7.4,<10.0"
pytest-mock = "^3.11.1"
sarif-tools = ">=2,<4"
black = "^26.1.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests/analyzer/metadata",
    "tests/core"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
