[project]
name = "guarddog"
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
guarddog = "guarddog.cli:cli"

[tool.poetry]
name = "guarddog"
description = "GuardDog is a CLI tool for identifying malicious open source packages"
authors = ["Ellen Wang", "Christophe Tafani-Dereeper"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/DataDog/guarddog"
version = "3.0.0"

[tool.poetry.scripts]
guarddog = "guarddog.cli:cli"

[tool.poetry.dependencies]
click = "^8.4.1"
configparser = ">=5.3,<8.0"
disposable-email-domains = ">=0.0.103,<0.0.170"
prettytable="^3.17.0"
python = ">=3.10,<4"
python-dateutil = "^2.9.0"
python-whois = ">=0.8,<0.10"
# 1.12+ requires new version of libgit2 which is not avaiable in Alpine
pygit2 = ">=1.11,<1.19"
pyyaml = "^6.0"
requests = "^2.34.0"
semantic-version = "^2.10.0"
tarsafe = "^0.0.5"
termcolor = "^3.3.0"
urllib3 = "^2.7.0"
yara-python = "^4.5.4"
nono-py = ">=0.10.1"
packaging = ">=21.0"
boto3 = "^1.34"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"
# Used by the eval clustering tooling (evals/cluster.py) for fuzzy fingerprint matching
python-tlsh = "^4.5.0"
flake8 = ">=5.0.4,<8.0.0"
mypy = "^1.4.1"
pytest = ">=7.4,<10.0"
pytest-mock = "^3.11.1"
sarif-tools = ">=2,<4"
black = "^26.3.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests/analyzer/metadata",
    "tests/analyzer/sourcecode",
    "tests/core",
    "tests/reporters"
]

[tool.black]
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[solver]
min-release-age=7
